# PiLab

./: .clang-format  .clang_complete  .editorconfig  .gitignore  .travis.yml  LICENSE  config.in.bak  init-docker  meson.build  meson_options.txt  pilab.desktop  popup.glade  sensors.in
common/: .#pilab-api-calls.c  arraylist.c  hd44780.c  i2c-device.c  meson.build  pilab-api-calls.c  pilab-api-client.c  pilab-api-request-state.c  pilab-api-request.c  pilab-config.c  pilab-gpio-device.c  pilab-hashtable.c  pilab-hd44780.c  pilab-host-device.c  pilab-i2c-device-strategies.c  pilab-i2c-device.c  pilab-json-parser.c  pilab-lcd.c  pilab-list.c  pilab-log.c  pilab-popup.c  pilab-readline.c  pilab-slave-device.c  pilab-string.c  pilab-stringbuilder.c  pilab-time.c  stringbuilder.c
include/: arraylist.h  hd44780.h  i2c-device.h  pilab-api-calls.h  pilab-api-client.h  pilab-api-request-state.h  pilab-api-request.h  pilab-config.h  pilab-gpio-device.h  pilab-hashtable.h  pilab-hd44780.h  pilab-host-device.h  pilab-i2c-device-strategies.h  pilab-i2c-device.h  pilab-json-parser.h  pilab-lcd.h  pilab-list.h  pilab-log.h  pilab-popup.h  pilab-readline.h  pilab-slave-device.h  pilab-string.h  pilab-stringbuilder.h  pilab-time.h  stringbuilder.h
pilab/: main.c  meson.build
